--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.36.1",
     "react-social-icons": "^5.15.0",
     "tailwind-scrollbar": "^2.0.1"
