--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.5.2",
+    "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.8.1",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
